<resources>
    <string name="app_name">Message</string>


    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friend</string>


    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_signup">SignupActivity</string>

    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>

    <string name="login_button_label">Login</string>
    <string name="sign_up_button">SignUP!</string>
    <string name="action_logout">logout</string>

    <string name="emai_field">Email</string>

    <string name="signup_error_message">Please ! make sure you enter a UserName,Password and Email Address !</string>
    <string name="signup_error_title">Opps !</string>

    <string name="login_error_message">Please ! make sure you enter a UserName and Password</string>
    <string name="login_error_title">Opps !</string>



    <string name="empty_text_label">No new Message !</string>
    <string name="empty_friend_label">Add friend to begin !</string>
    <string name="menu_edit_friend_label">Edit Friend</string>
    <string name="title_activity_edit_friends">Edit Frident</string>

    <string name="hello_world">Hello world!</string>
    <string name="error_title">We are sorry !!!</string>


</resources>
